spacing fix for mobile

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -253,5 +253,5 @@ a {
 
 .src-link {
 	font-size: 10px;
-    top: -20px;
+    //top: -20px;
 }
