--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -23,7 +23,7 @@
             width: 200px;
             height: auto;
             margin-left: 0;
-            max-width: 50vw;
+            max-width: 33vw;
         }
 
         .cls-1{fill:#d5d5d5; fill: var(--header-cls-1-fill);}
